--- a/content/about.toml
+++ b/content/about.toml
@@ -3,27 +3,31 @@ title = "About"
 
 [profile]
 research_interests = [
-  "Computational Physics",
-  "Mathematical Principles",
-  "Proof of Theorems"
+  "Low-rank optimization",
+  "Bilevel optimization",
+  "Riemannian optimization",
+  "Reinforcement learning",
+  "Machine learning"
 ]
 
 [[sections]]
 id = "about"
 type = "markdown"
 source = "bio.md"
-title = "About"
-
-[[sections]]
-id = "featured_publications"
-type = "publications"
-title = "Selected Publications"
-filter = "selected"
-limit = 5
+title = "Short Bio"
 
 [[sections]]
 id = "news"
 type = "list"
 title = "News"
 source = "news.toml"
+
+[[sections]]
+id = "featured_publications"
+type = "publications"
+title = "Refereed papers & preprints"
+filter = "selected"
+limit = 5
+
+
 
