--- a/content/config.toml
+++ b/content/config.toml
@@ -1,33 +1,33 @@
 [site]
-title = "Jiale Liu"
-description = "PhD student at the University of Example."
-favicon = "/favicon.svg"
+title = "Yan Yang"
+description = "PhD @ Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences (CAS)"
+favicon = "/badminton_1.svg"
 last_updated = "November 18, 2025"
 
 [author]
-name = "Jiale Liu"
+name = "Yan Yang (杨俨)"
 title = "PhD Student"
-institution = "University of Example"
-avatar = "/bio.jpg"
+institution = "Academy of Mathematics and Systems Science (AMSS) • Chinese Academy of Sciences (CAS)"
+avatar = "/bio_Changsha_YY.jpg"
 
 [social]
 # Contact information (leave blank or delete to hide)
 
-email = "john.doe@example.com"
-location = "City, Country"
-location_url = "https://maps.google.com"
+email = "yangyan@amss.ac.cn"
+location = "Beijing, China"
+location_url = "https://maps.app.goo.gl/o4hfhdAZq6ggaUEDA" 
 location_details = [
-  "Room 123, Science Building,",
-  "University Avenue, City, Country"
+  "No. 55 Zhongguancun East Road",      # 中关村东路55号
+  "Haidian District, Beijing 100190"    # 海淀区，邮编
 ]
-google_scholar = "https://scholar.google.com"
-orcid = "https://orcid.org"
-github = "https://github.com"
-linkedin = "https://linkedin.com"
+google_scholar = "https://scholar.google.com.co/citations?user=gga4vtUAAAAJ&hl=vi"
+github = "https://github.com/UCAS-YanYang"
+linkedin = ""
+orcid = ""
 
 [features]
 # Show a like button on the about page
-enable_likes = true
+enable_likes = false
 
 # Display all subpages on a single page
 enable_one_page_mode = false
@@ -44,11 +44,11 @@ type = "page"
 target = "publications"
 href = "/publications"
 
-[[navigation]]
-title = "Teaching"
-type = "page"
-target = "teaching"
-href = "/teaching"
+# [[navigation]]
+# title = "Teaching"
+# type = "page"
+# target = "teaching"
+# href = "/teaching"
 
 [[navigation]]
 title = "Awards"
@@ -56,11 +56,11 @@ type = "page"
 target = "awards"
 href = "/awards"
 
-[[navigation]]
-title = "Services"
-type = "page"
-target = "services"
-href = "/services"
+# [[navigation]]
+# title = "Services"
+# type = "page"
+# target = "services"
+# href = "/services"
 
 [[navigation]]
 title = "CV"
